// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogContentText ACT theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1rxhis5-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ACT_ET theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1fivzk0-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURA theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-buloqi-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1d4gokr-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-115t1wv-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;
